<resources>
    <string name="app_name">Blockchain</string>
    <string name="menu_account_settings">Account Settings</string>
    <string name="menu_scan_private_key">Scan Private Key</string>
    <string name="menu_addresses_generate_new">Generate New Address</string>
    <string name="menu_addresses_scan_watch_only">Scan Watch Only Address</string>
    <string name="menu_addresses_paste">Paste Sending Address</string>
    <string name="menu_addresses_scan_address">Scan Sending Address</string>
    <string name="menu_leave_p2p_mode">Leave P2P Mode</string>
    <string name="running_in_p2p_mode">Running in P2P Mode</string>
    <string name="export_keys_dialog_button_archive">Archive</string>
    <string name="wallet_options_backup">Backup Wallet</string>
    <string name="import_export_keys_dialog_failure_title">Error</string>
    <string name="export_keys_dialog_mail_subject">Bitcoin Wallet private key backup</string>
    <string name="export_keys_dialog_mail_text">The attached encrypted file contains Bitcoin private keys and should be kept safe at all times. Don\'t forget the encryption password!</string>
    <string name="toast_wallet_reset">Wallet was reset,\nwill take some time to recover</string>
    <string name="export_keys_dialog_mail_intent_chooser">Archive keys using…</string>
    <string name="toast_wallet_download_failed">Failed to download wallet from server. Please check
		your internet connection.</string>
    <string name="toast_wallet_decryption_failed">Failed to decrypt wallet. Your password may be
		incorrect.</string>
    <string name="toast_wallet_decrypt_failed">Error decrypting wallet. Please check your
		password.</string>
    <string name="toast_generated_new_wallet">Generated new wallet.</string>
    <string name="toast_new_address_generated">New Address Generated</string>
    <string name="toast_generated_address">Generated Address %s.</string>
    <string name="toast_pin_saved">PIN Saved.</string>
    <string name="export_keys_dialog_title">Backup Wallet</string>
    <string name="export_keys_dialog_message">Your encrypted wallet will be written to external storage. In case of emergency the wallet can be restored online at blockchain.info or using the multibit.org bitcoin client.</string>
    <string name="export_keys_dialog_button_export">Export</string>
    <string name="import_export_keys_dialog_password">password</string>
    <string name="import_export_keys_dialog_show">Show password</string>
    <string name="import_text">Import</string>
    <string name="sweep_text">Sweep</string>
    <string name="export_keys_dialog_success">Your wallet has been saved to\n\n%s\n\nKeep it safe, and keep your password safe!\n\nDo you want to archive your wallet using an app?</string>
    <string name="export_keys_dialog_failure">Your private keys could not be exported:\n%s</string>
    <string name="toast_downloading_wallet">Downloading wallet.</string>
    <string name="toast_error_syncing_wallet">Error syncing wallet. Please check your internet
		connection.</string>
    <string name="toast_error_downloading_captcha">Error downloading captcha.</string>
    <string name="error_pairing_wallet">Error pairing wallet. Verify your identifier and password.</string>
    <string name="wallet_options_bug">Bug Report</string>
    <string name="wrong_private_key">Private Key does not match bitcoin address. You scanned %s</string>
    <string name="second_password_text">This action requires a second password in order to
		fully decrypt your bitcoin wallet. Please enter your second password
		below.</string>
    <string name="main_password_text">Please enter your main password below.</string>
    <string name="private_key_password_text">Encrypted private key detected. Please enter the password below.</string>
    <string name="wallet_identifier_title">Wallet Identifier</string>
    <string name="wallet_identifier_enter_text">Please enter your 36 character wallet identifier below including dashes. Two factor authentication must be temporarily disabled.</string>
    <string name="new_account_password_length_error">Password must be between 11 and 255 characters</string>
    <string name="new_account_password_mismatch_error">Passwords do not match</string>
    <string name="new_account_password_invalid_email">Invalid Email Address</string>
    <string name="new_account_kaptcha_error">Captcha code incorrect</string>
    <string name="new_account_no_kaptcha_error">You must enter a captcha code</string>
    <string name="new_account_success">New account successfully created</string>
    <string name="dialog_continue">Continue</string>
    <string name="second_password_title">Second Password</string>
    <string name="main_password_title">Main Password</string>
    <string name="private_key_password_title">Private Key Password</string>
    <string name="password_incorrect">Incorrect Password</string>
    <string name="generate_key_no_password_error">Cannot generate key without a second password</string>
    <string name="send_no_password_error">Cannot send transaction without a second password</string>
    <string name="ask_for_fee">This transaction is low priority it is recommended you include a miners fee. Would you like to add this fee now?</string>
    <string name="ask_for_private_key">This transaction requires the private key for Bitcoin address %s. Would you like to scan it from a paper wallet?</string>
    <string name="continue_without_fee">Continue Without Fee</string>
    <string name="add_fee">Add Fee</string>
    <string name="cancel">Cancel</string>
    <string name="yes">Yes</string>
    <string name="ask_you_sure_unpair">Are you sure you want to unpair your device?</string>
    <string name="ask_you_sure_exit">Are you sure you want to exit Blockchain Wallet?</string>
    <string name="error_setting_label">Error setting address label</string>
    <string name="new_account_title">New account</string>
    <string name="password">Password:</string>
    <string name="password_confirm">Confirm Password:</string>
    <string name="captcha">Captcha:</string>
    <string name="email">Email:</string>
    <string name="optional">Optional</string>
    <string name="captcha_code">Please type the captcha code</string>
    <string name="create_account">Create Account</string>
    <string name="creating_account">Creating new account. Please Wait</string>
    <string name="blockchain_state_disclaimer">Use at your own risk. Read the safety notes.</string>
    <string name="blockchain_state_message_hours">Blockchain %1$s, %2$d hours behind</string>
    <string name="blockchain_state_message_days">Blockchain %1$s, %2$d days behind</string>
    <string name="blockchain_state_message_weeks">Blockchain %1$s, %2$d weeks behind</string>
    <string name="blockchain_state_message_downloading">downloading</string>
    <string name="blockchain_state_message_stalled">stalled</string>
    <string name="blockchain_state_message_problem_storage">Blockchain not downloading: Storage problem</string>
    <string name="blockchain_state_message_problem_power">Blockchain not downloading: Power problem</string>
    <string name="blockchain_state_message_problem_network">Blockchain not downloading: Network problem</string>
    <string name="wallet_address_fragment_your">Your Bitcoin Address:</string>
    <string name="wallet_address_fragment_clipboard_msg">Bitcoin address copied to clipboard</string>
    <string name="wallet_address_fragment_share_dialog_title">Share your bitcoin address…</string>
    <string-array name="wallet_address_fragment_context">
        <item>List all</item>
        <item>Show QR code</item>
        <item>Copy to clipboard</item>
        <item>Share</item>
    </string-array>
    <string name="wallet_addresses_fragment_unlabeled">(unlabeled)</string>
    <string name="wallet_addresses_fragment_add_dialog_positive">Add address</string>
    <string name="wallet_balance_fragment_local_value">worth about %1$s %2$s</string>
    <string name="exchange_rates_fragment_empty_text">Could not load exchange rates</string>
    <string name="exchange_rates_activity_title">Exchange Rates</string>
    <string name="wallet_transactions_fragment_tab_received">Received</string>
    <string name="wallet_transactions_fragment_tab_all">Both</string>
    <string name="wallet_transactions_fragment_tab_sent">Sent</string>
    <string name="wallet_transactions_fragment_empty_text_received">No Bitcoins received so far</string>
    <string name="wallet_transactions_fragment_empty_text_sent">No Bitcoins sent so far</string>
    <string name="wallet_transactions_context_edit_address_title">Add/edit address</string>
    <string name="wallet_transactions_context_show_transaction_title">Transaction details</string>
    <string name="wallet_options_request_coins">Request coins</string>
    <string name="wallet_options_send_coins">Send coins</string>
    <string name="wallet_options_about">About</string>
    <string name="wallet_options_safety">Safety notes</string>
    <string name="wallet_options_donate">Tip / Donate</string>
    <string name="wallet_options_help">Help</string>
    <string name="wallet_low_storage_dialog_title">Internal Device Storage Space Low!</string>
    <string name="wallet_low_storage_dialog_msg">Bitcoin Wallet uses internal storage for
		remembering transactions and blocks. If it runs out of
		space, it will
		stop working and your Bitcoins are at risk!\n\nDo you want to open the
		Application Manager in order to
		uninstall unneeded apps?</string>
    <string name="wallet_low_storage_dialog_button_apps">Manage Apps</string>
    <string name="wallet_timeskew_dialog_title">Check your time settings!</string>
    <string name="wallet_timeskew_dialog_msg">Your device time is off by %d minutes. You probably
		cannot send or receive Bitcoins due to this
		problem.\n\nYou should
		check and correct your time and timezone settings.</string>
    <string name="wallet_timeskew_dialog_button_settings">Settings</string>
    <string name="send_coins_activity_title">Send Bitcoins</string>
    <string name="send_coins_install_qr_scanner_msg">Please install ZXing QR-code scanner or Goggles!</string>
    <string name="send_coins_uri_parse_error_title">Invalid Bitcoin URI</string>
    <string name="send_coins_parse_address_error_msg">Got invalid bitcoin address!\n(Mixing up
		Testnet/Prodnet?)</string>
    <string name="address_book_activity_title">Address Book</string>
    <string name="transaction_fragment_time_label">Sent Time</string>
    <string name="transaction_fragment_confirmations_label">Confirmations</string>
    <string name="transaction_fragment_fee_label">Fee</string>
    <string name="transaction_fragment_value_label">Value</string>
    <string name="transaction_fragment_hash_label">Hash</string>
    <string name="add_note">Add Note</string>
    <string name="menu_enter_p2p_mode">Enter P2P Mode</string>
    <string name="ignore">Ignore.</string>
    <string name="rng_announcement_description">A vulnerability has been found in the random number generator used in previous versions of the Blockchain android app. \n\n It is highly recommended that all coins be moved to new bitcoin addresses. This can be done automatically but will invalidate any existing wallet backups. Would you like to begin this process now?</string>
    <string name="action_settings">Account settings</string>
    <string name="address_book">Address book</string>
    <string name="nearby_merchants">Merchant Map</string>
    <string name="about_us">About Blockchain Bitcoin Wallet for Android</string>
    <string name="feedback">Send Feedback</string>
    <string name="BTC">BTC</string>
    <string name="scan_button">scan button</string>
    <string name="refresh_button">refresh button</string>
	<string name="manual_pairing_prompt">For manual pairing: Enter your 36 character wallet identifier including dashes and your password. Make sure that 2FA is disabled.</string>
    <string name="ok">Ok</string>
</resources>