<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/menu_account_settings"
        android:showAsAction="never"
        android:title="@string/menu_account_settings"/>
    <item
        android:id="@+id/wallet_options_address_book"
        android:showAsAction="never"
        android:title="@string/address_book_activity_title"/>
    <item
        android:id="@+id/wallet_options_exchange_rates"
        android:showAsAction="never"
        android:title="@string/exchange_rates_activity_title"/>
    <item
        android:id="@+id/scan_private_key"
        android:showAsAction="never"
        android:title="@string/menu_scan_private_key"/>
    
    <item
        android:id="@+id/scan_watch_only"
        android:showAsAction="never"
        android:title="@string/menu_addresses_scan_watch_only"/>
    
    <item
        android:id="@+id/backup_wallet"
        android:showAsAction="never"
        android:title="@string/wallet_options_backup"/>
    
    <item
        android:id="@+id/menu_leave_p2p_mode"
        android:showAsAction="never"
        android:title="@string/menu_leave_p2p_mode"/>
    <item
        android:id="@+id/menu_start_p2p_mode"
        android:showAsAction="never"
        android:title="@string/menu_enter_p2p_mode"/>
    <item
        android:id="@+id/new_wallet"
        android:showAsAction="never"
        android:title="New wallet"/>
    
</menu>