<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/addresses_menu_generate"
        android:showAsAction="never"
        android:title="@string/menu_addresses_generate_new"/>
    
    <item
        android:id="@+id/addresses_menu_scan_private_key"
        android:showAsAction="never"
        android:title="@string/menu_scan_private_key"/>
    
    <item
        android:id="@+id/addresses_menu_scan_watch_only"
        android:showAsAction="never"
        android:title="@string/menu_addresses_scan_watch_only"/>
    
    <item
        android:id="@+id/addresses_menu_paste"
        android:showAsAction="never"
        android:title="@string/menu_addresses_paste"/>
    <item
        android:id="@+id/addresses_menu_scan_uri"
        android:showAsAction="never"
        android:title="@string/menu_addresses_scan_address"/>

</menu>