<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:minWidth="420dp"
    android:orientation="vertical"
    android:layout_gravity="center_horizontal"
    android:gravity="center_horizontal"
    android:padding="20dp"
    >

  <LinearLayout  android:layout_height="wrap_content" android:layout_width="match_parent" android:orientation="vertical">
  <TextView android:text="@string/manual_pairing_prompt" android:textStyle="bold" android:textColor="#000000" android:layout_height="wrap_content" android:layout_width="wrap_content" android:padding="3dip"/> 
  </LinearLayout>
    
 <LinearLayout  android:layout_height="wrap_content" android:layout_width="match_parent" android:orientation="vertical">
  <TextView android:text="@string/wallet_identifier_title" android:textColor="#000000" android:layout_height="wrap_content" android:layout_width="wrap_content" android:padding="3dip"/> 
  <EditText android:id="@+id/uuid" android:layout_height="wrap_content" android:layout_width="match_parent" android:padding="3dip" android:textSize="14sp" /> 
  </LinearLayout>

 <LinearLayout  android:layout_height="wrap_content" android:layout_width="match_parent" android:orientation="vertical">
  <TextView android:text="@string/main_password_title" android:textColor="#000000" android:layout_height="wrap_content" android:layout_width="wrap_content" android:padding="3dip"/> 
  <EditText android:id="@+id/pw" android:password="true" android:layout_height="wrap_content" android:layout_width="match_parent" android:padding="3dip" /> 
  </LinearLayout>

 <LinearLayout  android:layout_height="wrap_content" android:layout_width="match_parent" android:orientation="horizontal">
 <Button android:id="@+id/cancel" android:layout_height="80dip" android:layout_width="wrap_content" android:text="@string/cancel" />
 <Button android:id="@+id/ok" android:layout_height="80dip" android:layout_width="fill_parent" android:text="@string/ok" />
 </LinearLayout>
    
</LinearLayout>
 