<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:id="@+id/widget_frame"
	android:layout_width="fill_parent"
	android:layout_height="fill_parent"
	android:background="@drawable/appwidget_dark_bg_clickable"
	android:focusable="false"
	android:orientation="horizontal" >

		<TextView
			android:id="@+id/widget_wallet_balance"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:singleLine="true"
			android:textColor="#eee"
			android:textSize="19sp" />

		<TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginRight="6sp"
			android:text="@string/BTC"
			android:textColor="#bbb"
			android:textSize="16sp" />
						
	    <ImageButton
	        android:id="@+id/scan_button"
			android:contentDescription="@string/scan_button"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content" />	
	    <ImageButton
	        android:id="@+id/refresh_button"
			android:contentDescription="@string/refresh_button"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content" />	
	    <ImageButton
	        android:id="@+id/send_button"
			android:contentDescription="@string/send_button"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content" />	

</LinearLayout>