<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingBottom="15dp"
    android:paddingLeft="10dp"
    android:paddingRight="10dp" >

    <TextView
        android:id="@+id/result_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:paddingBottom="10dp"
        android:paddingTop="10dp"
        android:textColor="@color/insignificant"
        android:textSize="21sp"
        android:textStyle="bold" />

    <LinearLayout
        android:id="@+id/transaction_to_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:padding="2dp" >

        <TextView
            android:id="@+id/transaction_to_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingRight="16dp"
            android:textColor="@color/insignificant"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/transaction_to"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:singleLine="true"
            android:textColor="@color/insignificant"
            android:textSize="16sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:padding="2dp" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingRight="16dp"
            android:text="@string/transaction_fragment_hash_label"
            android:textColor="@color/insignificant"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/transaction_hash"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:singleLine="true"
            android:textColor="@color/insignificant"
            android:textSize="16sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:padding="2dp" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingRight="16dp"
            android:text="@string/transaction_fragment_time_label"
            android:textColor="@color/insignificant"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/transaction_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/insignificant"
            android:textSize="16sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:padding="2dp" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingRight="16dp"
            android:text="@string/transaction_fragment_confirmations_label"
            android:textColor="@color/insignificant"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/transaction_confirmations"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/insignificant"
            android:textSize="16sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/transaction_fee_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:padding="2dp"
        android:textColor="@color/insignificant" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingRight="16dp"
            android:text="@string/transaction_fragment_fee_label"
            android:textColor="@color/insignificant"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/transaction_fee"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/insignificant"
            android:textSize="16sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/transaction_value_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:padding="2dp" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingRight="16dp"
            android:text="@string/transaction_fragment_value_label"
            android:textColor="@color/insignificant"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/transaction_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/insignificant"
            android:textSize="16sp" />
    </LinearLayout>

    <TextView
        android:id="@+id/transaction_note"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:paddingTop="10dp"
        android:textColor="@color/insignificant"
        android:textSize="16sp"
        android:textStyle="italic" />

    <Button
        android:id="@+id/add_note_button"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:text="@string/add_note" />

</LinearLayout>